--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "bun --bun next lint"
   },
   "dependencies": {
+    "next": "15.2.0",
     "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106",
-    "next": "15.1.2"
+    "react-dom": "19.0.0-rc-66855b96-20241106"
   },
   "devDependencies": {
     "typescript": "^5",
