--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "bun --bun next lint"
   },
   "dependencies": {
-    "next": "15.4.7",
-    "react": "19.0.0-rc-66855b96-20241106",
-    "react-dom": "19.0.0-rc-66855b96-20241106"
+    "next": "^16.0.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.9",
